--- a/myconf_alpine.conf
+++ b/myconf_alpine.conf
@@ -28,7 +28,7 @@ LoadModule mime_module modules/mod_mime.so
 </IfModule>
 
 #Main config/VHost defaults
-ServerAdmin ilyapetrov.mosobl@gmail.com
+ServerAdmin YourEmailHere@gmail.com
 
 #Add version and vhost name to server-generated pages
 ServerSignature On
